GNOME Bugzilla – Bug 665631
mpeg4videoparse regressions
Last modified: 2011-12-06 20:08:44 UTC
The following pipeline: gst-launch -e -v -m -t rtspsrc location=rtsp://192.168.2.17/udpstream ! rtpmp4vdepay ! mpeg4videoparse ! muxer ! filesink ... works in a reliable way with bad 0.10.22 but often fails with today git with the following errors: "mpeg4vparse0" (error): GstMessageError, gerror=(GError)NULL, debug=(string)"gstbaseparse.c\(2223\):\ gst_base_parse_check_sync\ \(\):\ /GstPipeline:pipeline0/GstMpeg4VParse:mpeg4vparse0"; ERRORE: dall'elemento /GstPipeline:pipeline0/GstMpeg4VParse:mpeg4vparse0: Failed to parse stream or: /GstPipeline:pipeline0/GstMpeg4VParse:mpeg4vparse0: No valid frames found before end of stream you can find two files that reproduce the errors here: http://77.43.75.110/temp/test-mp4.gdp http://77.43.75.110/temp/test-mp4_1.gdp try with the following pipeline (that works fine in 0.10.22): gst-launch filesrc location=/tmp/test-mp4.gdp ! gdpdepay ! mpeg4videoparse ! mp4mux ! filesink location=/tmp/test.mp4
Bisecting gives the following for me: 48ad76e53844d54bb7ab23887c72813a29079624 is the first bad commit commit 48ad76e53844d54bb7ab23887c72813a29079624 Author: Thibault Saunier <thibault.saunier@collabora.com> Date: Mon Sep 26 16:58:58 2011 -0300 mpeg4videoparse: Port to the new mpeg4parser library :040000 040000 4f7c7cd1c827cf5e4652f9705262630601913b2b 9a3b63c5222f59a8337f5bfe8a5a3e2b8158510a M gst
commit 6b3a314d36d45d403dc5c162c1719913192c5c84 Author: Thibault Saunier <thibault.saunier@collabora.com> Date: Tue Dec 6 16:27:25 2011 -0300 videoparsers: Do not not skip startcode when needed Fix: https://bugzilla.gnome.org/show_bug.cgi?id=665631