videoparsers: Do not not skip startcode when needed

Fix: https://bugzilla.gnome.org/show_bug.cgi?id=665631